# xit

./: README.md  README.rst  pyproject.toml
docs/source/: AUTHORS.rst  backlog.rst  conf.py  faqs.rst  index.rst
docs/source/adrs/: adr-0001-use-adrs.rst  adr-0002-use-rfcs.rst  adr-0003-use-sphinx.rst  adr-0004-poetry-for-development-stage.rst  rfc-0001-documentation.rst
src/xit/: __init__.py
src/xit/cli/: __init__.py
tests/: __init__.py
xit/: __meta__.py  mappings.py  objects.py
xit/tools/: __init__.py  files.py  mappings.py  misc.py  objects.py
