[project]
name = "xit"
version = "0.1.0"
description = "Useful tools for common applications"
authors = [ { name = "Medardo Antonio Rodriguez" } ]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
xit = "xit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
