[project]
name = "xit"
version = "0.1.0"
description = "Useful tools for common applications"
authors = [ { name = "Medardo Antonio Rodriguez" } ]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
xit = "xit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
]
