[project]
name = "xit"
version = "0.1.0"
description = "Useful tools for common applications"
authors = [ { name = "Medardo Antonio Rodriguez" } ]
requires-python = ">=3.13"
dependencies = [
    "typer-slim>=0.15.1",
]

[project.scripts]
xit = "xit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "tests", "docs"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
]
docs = [
    "myst-parser>=4.0.0",
    "sphinx>=8.1.3",
]
tests = [
    "pytest>=8.3.4",
]

[tool.pydocstyle]
add-ignore = [
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
